--- a/index.html
+++ b/index.html
@@ -4,5 +4,9 @@
         <title>my website</title>
     </head>
     <body>
+        <h1>You are not authorized to be here. Access denied.</h1>
+        <br>
+        <p> You may have entered a wrong password, or you may have been hacked by an unknown source. Please contact the owner of this website.<p>
+        <p> <strong> For more details, please contact the owner of this site, Daniel Shin, or go to bit.ly/catachu to learn more. </strong> <p>
     </body>
 </html>
