--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>CARROTS</title>
     </head>
     <body>
+        <iframe src="https://giphy.com/embed/zDuStFVpRJIZ2" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/minecraft-3-zDuStFVpRJIZ2"></a></p>
         <h1>You are not authorized to be here. Access denied.</h1>
         <br>
         <p> You may have entered a wrong URL, or you may have been hacked by an unknown source. Please contact the owner of this website.<p>
