--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>CARROTS</title>
     </head>
-    <body style="color: red">
+    <body style="background: red">
         <iframe src="https://giphy.com/embed/zDuStFVpRJIZ2" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://minecraft.net"></a></p>
         <h1>You are not authorized to be here. Access denied.</h1>
         <br>
