--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="icon" href="https://vignette.wikia.nocookie.net/tf2-crap/images/6/62/SMG4.PNG/revision/latest?cb=20170913010022">
         <title>CARROTS</title>
     </head>
     <body style="background: blue">
