--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
         <title>CARROTS</title>
     </head>
     <body style="background: blue">
-        <iframe src="https://giphy.com/embed/zDuStFVpRJIZ2" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://minecraft.net"></a></p>
+        <div style="width: 1500px">
+            <iframe style="float:right" src="https://media1.tenor.com/images/c09674f53c5104dd5e716736a2449771/tenor.gif">
+            <iframe style="float:left" src="https://giphy.com/embed/zDuStFVpRJIZ2" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://minecraft.net"></a></p>
+        </div>
         <h1>You are not authorized to be here. Access denied.</h1>
         <br>
         <p> You may have entered a wrong URL, or you may have been hacked by an unknown source. Please contact the owner of this website.<p>
