--- a/index.html
+++ b/index.html
@@ -5,17 +5,14 @@
         <title>CARROTS</title>
     </head>
     <body style="background: blue">
-        <div style="width: 1500px">
-            <iframe style="float:left width: 800px" src="https://giphy.com/embed/zDuStFVpRJIZ2" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://minecraft.net"></a></p>
-            <iframe style="float:left width: 700px" src="https://media1.tenor.com/images/c09674f53c5104dd5e716736a2449771/tenor.gif">
-        </div>
+        <iframe style="float:left width: 800px" src="https://giphy.com/embed/zDuStFVpRJIZ2" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://minecraft.net"></a></p>
         <h1>You are not authorized to be here. Access denied.</h1>
         <br>
         <p> You may have entered a wrong URL, or you may have been hacked by an unknown source. Please contact the owner of this website.<p>
         <p> <strong> For more details, please contact the owner of this site, Daniel, or go to <a href="https://danielshinawesome.wixsite.com/catachu">bit.ly/catachu</a> to learn more. </strong> <p>
         <br>
         <div>
-            <script src="https://cdn.htmlgames.com/embed.js?game=2048City&amp;&amp;bgcolor=white"></script>
+            <script style="width: 700px" src="https://cdn.htmlgames.com/embed.js?game=2048City&amp;&amp;bgcolor=white"></script>
         </div>
         <br>
         <div style="width: 1500px">
