--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link rel="icon" href="https://vignette.wikia.nocookie.net/tf2-crap/images/6/62/SMG4.PNG/revision/latest?cb=20170913010022">
         <title>CARROTS</title>
     </head>
-    <body style="background: blue">        <h1>You are not authorized to be here. Access denied.</h1>
+    <body style="background: green">        <h1>You are not authorized to be here. Access denied.</h1>
         <br>
         <div style="width: 1500px>
             <iframe style="float:left width: 800px" src="https://giphy.com/embed/zDuStFVpRJIZ2" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://minecraft.net"></a></p>
