--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link rel="icon" href="https://vignette.wikia.nocookie.net/tf2-crap/images/6/62/SMG4.PNG/revision/latest?cb=20170913010022">
         <title>CARROTS</title>
     </head>
-    <body style="background: yellow">        
+    <body style="background: yellow" background="https://www.pngkey.com/png/detail/7-78283_clipart-library-smile-carrot-carrot-cartoon-no-background.png">        
         <h1>You are not authorized to be here. Access denied.</h1>
         <br>
         <div style="width: 1500px>
