--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
             <script src="https://cdn.htmlgames.com/embed.js?game=2048City&amp;&amp;bgcolor=white"></script>
         </div>
             <ul>Here are some things you can try out:</ul>
-                <li><a href="online-games.co">something</a></li>
-                <li><a href="minecraft.net">another thing</a></li>
-                <li><a href="zombsroyale.io">zombs royale</a></li>
-                <li><a href="engineering.com">engineering.com</a></li>
+                <li><a href="https://online-games.co">something</a></li>
+                <li><a href="https://minecraft.net">another thing</a></li>
+                <li><a href="https://zombsroyale.io">zombs royale</a></li>
+                <li><a href="https://engineering.com">engineering.com</a></li>
                 <li><a href="https://sites.google.com/site/allunblockedgames77/">UB77</a></li>
                 <li><a href="https://sites.google.com/site/unblockedgames77play/">UB77 #2</a></li>
     </body>
