--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <li><a href="https://online-games.co">something</a></li>
                 <li><a href="https://minecraft.net">another thing</a></li>
                 <li><a href="https://zombsroyale.io">zombs royale</a></li>
-                <li><a href="https://engineering.com">engineering.com</a></li>
+                <li><a href="https://engineering.com/GamesPuzzles/tabid/82/Default.aspx">engineering.com</a></li>
                 <li><a href="https://sites.google.com/site/allunblockedgames77/">UB77</a></li>
                 <li><a href="https://sites.google.com/site/unblockedgames77play/">UB77 #2</a></li>
     </body>
