--- a/index.html
+++ b/index.html
@@ -170,5 +170,6 @@
                 <li><a href="https://engineering.com/GamesPuzzles/tabid/82/Default.aspx">engineering.com</a></li>
                 <li><a href="https://sites.google.com/site/allunblockedgames77/">UB77</a></li>
                 <li><a href="https://sites.google.com/site/unblockedgames77play/">UB77 #2</a></li>
+                <li><a href="yeet">a bunch more stuff</a></li>
     </body>
 </html>
