--- a/whee.html
+++ b/whee.html
@@ -6,10 +6,10 @@
 <body>
     <h1>here are some cool .io webs!</h1>
     <ul>
-      <li><a href="diep.io">diep.io</a></li>
-      <li><a href="agar.io">agar.io</a></li>
-      <li><a href="zombs.io">zombs.io</a></li>
-      <li><a href="moomoo.io">moomoo.io</a></li>
-      <li><a href="shellshock.io">shellshock.io</a></li>
+      <li><a href="https://diep.io">diep.io</a></li>
+      <li><a href="https://agar.io">agar.io</a></li>
+      <li><a href="https://zombs.io">zombs.io</a></li>
+      <li><a href="https://moomoo.io">moomoo.io</a></li>
+      <li><a href="https://shellshock.io">shellshock.io</a></li>
 </body>
 </html>
