--- a/index.html
+++ b/index.html
@@ -165,15 +165,16 @@
         <div>
             <script src="https://cdn.htmlgames.com/embed.js?game=FrozenBubble&amp;&amp;bgcolor=white"></script>
         </div>
-            <ul id="Yeet">Here are some things you can try out:</ul>
-                <li><a href="https://online-games.co">something</a></li>
-                <li><a href="https://minecraft.net">minecraft</a></li>
-                <li><a href="https://zombsroyale.io">zombs royale</a></li>
-                <li><a href="https://shellshock.io">shellshock</a></li>
-                <li><a href="https://engineering.com/GamesPuzzles/tabid/82/Default.aspx">engineering.com</a></li>
-                <li><a href="https://sites.google.com/site/allunblockedgames77/">UB77</a></li>
-                <li><a href="https://sites.google.com/site/unblockedgames77play/">UB77 #2</a></li>
-                <li><a href="yeet">a bunch more stuff</a></li>
-                <li><a href="whee">a bunch more more stuff</a></li>
+        <embed width="800" height="600" base="https://external.kongregate-games.com/gamez/0019/2194/live/" src="https://external.kongregate-games.com/gamez/0019/2194/live/embeddable_192194.swf" type="application/x-shockwave-flash"></embed><br/>Play free games at <a href="https://www.kongregate.com/">Kongregate</a>
+        <ul id="Yeet">Here are some things you can try out:</ul>
+            <li><a href="https://online-games.co">something</a></li>
+            <li><a href="https://minecraft.net">minecraft</a></li>
+            <li><a href="https://zombsroyale.io">zombs royale</a></li>
+            <li><a href="https://shellshock.io">shellshock</a></li>
+            <li><a href="https://engineering.com/GamesPuzzles/tabid/82/Default.aspx">engineering.com</a></li>
+            <li><a href="https://sites.google.com/site/allunblockedgames77/">UB77</a></li>
+            <li><a href="https://sites.google.com/site/unblockedgames77play/">UB77 #2</a></li>
+            <li><a href="yeet">a bunch more stuff</a></li>
+            <li><a href="whee">a bunch more more stuff</a></li>
     </body>
 </html>
