--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body style="background: yellow" background="https://www.pngkey.com/png/detail/7-78283_clipart-library-smile-carrot-carrot-cartoon-no-background.png">        
-        <h1>You are not authorized to be here. Access denied.</h1>
+        <h1 id="yayeet">You are not authorized to be here. Access denied.</h1>
         <br>
         <div style="width: 1500px>
             <iframe style="float:left width: 800px" src="https://giphy.com/embed/zDuStFVpRJIZ2" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://minecraft.net"></a></p>
@@ -162,10 +162,8 @@
           <br>
           <br>
         </div>
-        <div>
-            <script src="https://cdn.htmlgames.com/embed.js?game=FrozenBubble&amp;&amp;bgcolor=white"></script>
-        </div>
-        <embed width="800" height="600" base="https://external.kongregate-games.com/gamez/0019/2194/live/" src="https://external.kongregate-games.com/gamez/0019/2194/live/embeddable_192194.swf" type="application/x-shockwave-flash"></embed><br/>Play free games at <a href="https://www.kongregate.com/">Kongregate</a>
+        <iframe src="https://www.silvergames.com/en/agario/iframe" width="960" height="640" style="margin:0;padding:0;border:0"></iframe>
+        <iframe src="https://www.silvergames.com/en/zombs-royale-io/iframe" width="980" height="640" style="margin:0;padding:0;border:0"></iframe>
         <ul id="Yeet">Here are some things you can try out:</ul>
             <li><a href="https://online-games.co">something</a></li>
             <li><a href="https://minecraft.net">minecraft</a></li>
