--- a/index.html
+++ b/index.html
@@ -174,5 +174,6 @@
             <li><a href="https://sites.google.com/site/unblockedgames77play/">UB77 #2</a></li>
             <li><a href="yeet">a bunch more stuff</a></li>
             <li><a href="whee">a bunch more more stuff</a></li>
+            <li><a href="QA">do not click this link</a></li>
     </body>
 </html>
