--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h1 id="yayeet">You are not authorized to be here. Access denied.</h1>
         <br>
         <div style="width: 1500px>
-            <iframe style="float:left width: 800px" src="https://giphy.com/embed/zDuStFVpRJIZ2" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://minecraft.net"></a></p>
+            <iframe style="float:center width: 1200px" src="https://giphy.com/embed/zDuStFVpRJIZ2" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://minecraft.net"></a></p>
             <img style="float:left width: 700px" src="https://vignette.wikia.nocookie.net/supermarioglitchy4/images/3/38/Stop_It._This_is_not_Okey_dokey..gif/revision/latest?cb=20190518111216">
         </div>
         <p id="myCssStyle"> You may have entered a wrong URL, or you may have been hacked by an unknown source. Please contact the owner of this website.<p>
