--- a/Taryn.html
+++ b/Taryn.html
@@ -1,28 +1,22 @@
 <!DOCTYPE html>
-<html style="background: aqua">
+<html style="background: cyan">
 <head>
     <title>Hi Taryn!</title>
 </head>
 <body>
     <p>Congratulations! You found this file!</p>
-    <p></p>
-    <p>Hi, Taryn. How are you? Oh, and before I forget, happy 14th birthday! This is your last birthday before you move back to Korea, so don't waste it!</p>
-    <p>First of all, I'm really happy you found this file. It tells me that you really care about what I do for you, and that you didn't just look at my</p>
-    <p>work and immediately put it away. I know sometimes when I send you really long texts you don't always read the whole thing. But I don't blame you!</p>
-    <p>I completely understand. I do that sometimes, too. Also, I send you a lot of boring stuff that you don't always understand. Sorry!</p>
-    <p></p>
-    <p></p>
-    <p>...But I'm getting off topic. The point is, happy 14th birthday! I really hope you enjoy your stay at Korea, and don't forget to send all of us some</p>
-    <p>letters and stuff!</p>
-    <p></p>
+    <br>
+    <p>Hi, Taryn. How are you? Oh, and before I forget, happy 14th birthday! This is your last birthday before you move back to Korea, so don't waste it! First of all, I'm really happy you found this file. It tells me that you really care about what I do for you, and that you didn't just look at my work and immediately put it away. I know sometimes when I send you really long texts you don't always read the whole thing. But I don't blame you! I completely understand. I do that sometimes, too. Also, I send you a lot of boring stuff that you don't always understand. Sorry!</p>
+    <br>
+    <br>
+    <p>...But I'm getting off topic. The point is, happy 14th birthday! I really hope you enjoy your stay at Korea, and don't forget to send all of us some letters and stuff!</p>
+    <br>
     <p>Yours,</p>
     <p>Daniel Shin</p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p>P.S. Okay, I admit it: I printed out the Eevee image and then traced it with pencil on the poster. But still, I put a lot of effort into it! I spent</p>
-    <p>more than an hour working on it, and I also risked my parents yelling at me when I did it. Trying not to brag here or anything but pls don't think I'm</p>
-    <p>pathetic or something lol</p>
+    <br>
+    <br>
+    <br>
+    <p>P.S. Okay, I admit it: I printed out the Eevee image and then traced it with pencil on the poster. But still, I put a lot of effort into it! I spent more than an hour working on it, and I also risked my parents yelling at me when I did it. Trying not to brag here or anything but pls don't think I'm pathetic or something lol</p>
     
 </body>
 </html>
