--- a/Taryn.html
+++ b/Taryn.html
@@ -5,11 +5,9 @@
 </head>
 <body>
     <p>Congratulations! You found this file!</p>
-    <br>
     <p>Hi, Taryn. How are you? Oh, and before I forget, happy 14th birthday! This is your last birthday before you move back to Korea, so don't waste it! First of all, I'm really happy you found this file. It tells me that you really care about what I do for you, and that you didn't just look at my work and immediately put it away. I know sometimes when I send you really long texts you don't always read the whole thing. But I don't blame you! I completely understand. I do that sometimes, too. Also, I send you a lot of boring stuff that you don't always understand. Sorry!</p>
-    <br>
-    <br>
-    <p>...But I'm getting off topic. The point is, happy 14th birthday! I really hope you enjoy your stay at Korea, and don't forget to send all of us some letters and stuff!</p>
+    <p>Second, don't feel bad (if you ever did) that you're leaving all of us behind. I, for one, fully support your decision to continue your education in your home country. Sure, we'll miss you, but not too much. Why? Well, we can contact you anytime! Just don't get rid of your google account anytime soon and we should be able to keep in touch! I hope you have a great time!</p>
+    <p>...But I'm getting off topic. The point is, happy 14th birthday! It's really a shame that we couldn't have a get-together or something to celebrate your birthday because of COVID, but you can still enjoy your birthday! See you around!</p>
     <br>
     <p>Yours,</p>
     <p>Daniel Shin</p>
@@ -17,6 +15,110 @@
     <br>
     <br>
     <p>P.S. Okay, I admit it: I printed out the Eevee image and then traced it with pencil on the poster. But still, I put a lot of effort into it! I spent more than an hour working on it, and I also risked my parents yelling at me when I did it. Trying not to brag here or anything but pls don't think I'm pathetic or something lol</p>
-    
+    <p>P.P.S. Oh, and I didn't have time to color it. Sorry! If you want to color it in with colored pencils or something, go right ahead!</p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <p> ♥️ </p>
 </body>
 </html>
