--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Warning</title>
         <link rel="stylesheet" href="styles.css">
     </head>
-    <body style="background: yellow; background-image: url('https://www.pngkey.com/png/detail/7-78283_clipart-library-smile-carrot-carrot-cartoon-no-background.png');">        
+    <body style="background-image: url('https://www.pngkey.com/png/detail/7-78283_clipart-library-smile-carrot-carrot-cartoon-no-background.png');">        
         <h1 id="yayeet">You are not authorized to be here. Access denied.</h1>
         <br>
         <div style="width: 1500px>
@@ -16,7 +16,7 @@
         <p id="MyCssStyle"> <strong> For more details, please contact the owner of this site, Daniel, or go to <a href="https://danielshinawesome.wixsite.com/catachu">bit.ly/catachu</a> to learn more. </strong> <p>
         <br>
         <br>
-        <div id="something">
+        <div>
           <br>
           <br>
           <br>
