--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Warning</title>
         <link rel="stylesheet" href="styles.css">
     </head>
-    <body style="background-image: url('https://www.pngkey.com/png/detail/7-78283_clipart-library-smile-carrot-carrot-cartoon-no-background.png');">        
+    <body style="background-image: url('https://www.pngkey.com/png/detail/7-78283_clipart-library-smile-carrot-carrot-cartoon-no-background.png'); background-size: 50px 50px">        
         <h1 id="yayeet">You are not authorized to be here. Access denied.</h1>
         <br>
         <div style="width: 1500px>
