--- a/secret.html
+++ b/secret.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <style>
+    body {
+      background-image: url('https://64.media.tumblr.com/c481d3306f3755e29f8bbadbcab473e4/tumblr_n1jebfRopG1rm6jd7o1_1280.png');
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: cover;
+    }
+    </style>
     <p>Some roses are red</p>
     <p>But some are white</p>
     <p>In a world of darkness</p>
