--- a/secret.html
+++ b/secret.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>untitled</title>
+  </head>
   <body>
     <style>
     body {
@@ -26,5 +29,8 @@
     <br>
     <br>
     <p>Happy birthday, Taryn</p>
+    <br>
+    <p>Yours always,</p>
+    <p>         Daniel Shin</p>
   </body>
 </html>
