--- a/Taryn.html
+++ b/Taryn.html
@@ -119,6 +119,6 @@
     <br>
     <br>
     <br>
-    <p><a href="secret"> ♥️ </a></p>
+    <p><a href="http://bit.ly/TK_DS"> ♥️ </a></p>
 </body>
 </html>
