--- a/Taryn.html
+++ b/Taryn.html
@@ -5,9 +5,10 @@
 </head>
 <body>
     <p>Congratulations! You found this file!</p>
-    <p>Hi, Taryn. How are you? Oh, and before I forget, happy 14th birthday! This is your last birthday before you move back to Korea, so don't waste it! First of all, I'm really happy you found this file. It tells me that you really care about what I do for you, and that you didn't just look at my work and immediately put it away. I know sometimes when I send you really long texts you don't always read the whole thing. But I don't blame you! I completely understand. I do that sometimes, too. Also, I send you a lot of boring stuff that you don't always understand. Sorry!</p>
-    <p>Second, don't feel bad (if you ever did) that you're leaving all of us behind. I, for one, fully support your decision to continue your education in your home country. Sure, we'll miss you, but not too much. Why? Well, we can contact you anytime! Just don't get rid of your google account anytime soon and we should be able to keep in touch! I hope you have a great time!</p>
+    <p>Hi, Taryn. How are you? Oh, and before I forget, happy 14th birthday! This is your last birthday before you move back to Korea, so don't waste it!</p>
+    <p>By the way, don't feel bad (if you ever did) that you're leaving all of us behind. I, for one, fully support your decision to continue your education in your home country. Sure, we'll miss you, but not too much. Why? Well, we can contact you anytime! Just don't get rid of your google account anytime soon and we should be able to keep in touch! I hope you have a great time!</p>
     <p>...But I'm getting off topic. The point is, happy 14th birthday! It's really a shame that we couldn't have a get-together or something to celebrate your birthday because of COVID, but you can still enjoy your birthday! See you around!</p>
+    <p>Oh, and one last thing. I have had lots of friends over the years, many of whom have been and still are lifelong friends. They were kind, supportive, funny, and smart. Those are the kinds of things you see in a "best friend". Taryn, I want to let you know that you excel in all of those qualities. I don't mind if it isn't the same way for you, but you are my best friend.</p>
     <br>
     <p>Yours,</p>
     <p>Daniel Shin</p>
