--- a/index.html
+++ b/index.html
@@ -2,173 +2,17 @@
 <html>
     <head>
         <link rel="icon" href="https://vignette.wikia.nocookie.net/tf2-crap/images/6/62/SMG4.PNG/revision/latest?cb=20170913010022">
-        <title>Warning</title>
+        <title>I Have Brain Damage</title>
         <link rel="stylesheet" href="styles.css">
     </head>
-    <body style="background-image: url('https://www.pngkey.com/png/detail/7-78283_clipart-library-smile-carrot-carrot-cartoon-no-background.png'); background-size: 50px 50px">        
-        <h1 id="yayeet">You are not authorized to be here. Access denied.</h1>
+    <body style="background-image: url('https://st3.depositphotos.com/1030956/12572/v/950/depositphotos_125722914-stock-illustration-ornamental-continuous-background.jpg'); background-size: 500px 500px">        
+        <h1 id="yayeet">doot doot</h1>
         <br>
-        <div style="width: 1500px>
+        <div style="width: 1500px">
             <iframe style="float:center width: 1200px" src="https://giphy.com/embed/zDuStFVpRJIZ2" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://minecraft.net"></a></p>
-            <img style="float:left width: 700px" src="https://vignette.wikia.nocookie.net/supermarioglitchy4/images/3/38/Stop_It._This_is_not_Okey_dokey..gif/revision/latest?cb=20190518111216">
+            <img style="float:left width: 700px" src="https://media.tenor.com/LDsXN0PqNUwAAAAd/steve-jobs-its-so-sad.gif">
         </div>
-        <p id="myCssStyle"> You may have entered a wrong URL, or you may have been hacked by an unknown source. Please contact the owner of this website.<p>
-        <p id="MyCssStyle"> <strong> For more details, please contact the owner of this site, Daniel, or go to <a href="https://danielshinawesome.wixsite.com/catachu">bit.ly/catachu</a> to learn more. </strong> <p>
-        <br>
-        <br>
-        <div>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-        </div>
-        <iframe src="https://www.silvergames.com/en/zombs-royale-io/iframe" width="980" height="640" style="margin:0;padding:0;border:0"></iframe>
-        <ul id="Yeet">Here are some things you can try out:</ul>
-            <li><a href="https://online-games.co">something</a></li>
-            <li><a href="https://minecraft.net">minecraft</a></li>
-            <li><a href="https://zombsroyale.io">zombs royale</a></li>
-            <li><a href="https://shellshock.io">shellshock</a></li>
-            <li><a href="https://engineering.com/GamesPuzzles/tabid/82/Default.aspx">engineering.com</a></li>
-            <li><a href="https://sites.google.com/site/allunblockedgames77/">UB77</a></li>
-            <li><a href="https://sites.google.com/site/unblockedgames77play/">UB77 #2</a></li>
-            <li><a href="yeet">a bunch more stuff</a></li>
-            <li><a href="whee">a bunch more more stuff</a></li>
-            <li><a href="QA">do not click this link</a></li>
-    </body>
+        <p id="myCssStyle"> your free trial for kneecaps has expired. please insert 2000000 coins<p>
+        <p id="MyCssStyle"> <strong> i forgor </strong> <p>
+        </body>
 </html>
