--- a/secret.html
+++ b/secret.html
@@ -13,24 +13,23 @@
     }
     </style>
     <p>Some roses are red</p>
-    <p>But some are white</p>
+    <p>Some roses are white</p>
     <p>In a world of darkness</p>
     <p>You are my light</p>
     <br>
-    <p>Juliet roses are the rarest</p>
+    <p>Juliet roses are rarest</p>
     <p>And aside from their stem</p>
     <p>They're different from the others</p>
     <p>And you're special, like them</p>
     <br>
     <p>And then there's the violets</p>
-    <p>Only sometimes, they're blue</p>
+    <p>Which aren't always blue</p>
     <p>But no one can doubt</p>
     <p>I will always love you</p>
     <br>
     <br>
-    <p>Happy birthday, Taryn</p>
+    <p>Happy birthday</p>
     <br>
-    <p>Yours always,</p>
-    <p>         Daniel Shin</p>
+    <p>~Your admirer</p>
   </body>
 </html>
